--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=loja_livros
 
 # Configurações do Banco de dados
 spring.datasource.url=jdbc:postgresql://dpg-coulemo21fec73bpk9f0-a:5432/db_deploy_g26l
-spring.datasource.username='DB_USER'
+spring.datasource.username=${DB_USER}
 spring.datasource.password=3jGtZHzYSu1TR1H6OSJvgXwNUkTSmVPf
 
 # Configuraçoes do JPA - hibernate
